# garmin-workouts-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
garmin_workouts_mcp/: garmin_workout.py  main.py
tests/: test_garmin_workout.py  test_integration.py  test_main.py
